# depth-client

./: .gitignore  .gitmodules  DepthClient.sln  README.md
DepthClient/: .gitignore  DepthClient.csproj  Form1.Designer.cs  Form1.cs  Program.cs
DepthClient/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
DepthClient/ViewModels/: Command.cs  MainViewModel.cs  NotifyingClass.cs
DepthClient/from/: Program.cs  Window.xaml  Window.xaml.cs
ZCU.TechnologyLab.DepthClient/: ZCU.TechnologyLab.DepthClient.csproj
ZCU.TechnologyLab.DepthClient/DataModel/: BitmapProcessor.cs  ConnectionHandler.cs  ConsoleData.cs  ConsoleWriter.cs  Constants.cs  FilterData.cs  MeshProcessor.cs  Obj.cs  PointCloud.cs  PointMesh.cs  UserCodeProcessor.cs  WorldObjectProcessor.cs
ZCU.TechnologyLab.DepthClient/Ui/: ConsoleWindow.xaml  ConsoleWindow.xaml.cs  FilterConfigurationWindow.xaml  FilterConfigurationWindow.xaml.cs  NameDialog.xaml  NameDialog.xaml.cs  Program.cs  PutCursorAtEndTextBoxBehavior.cs  Window.xaml  Window.xaml.cs
ZCU.TechnologyLab.DepthClient/ViewModels/: Command.cs  ConsoleViewModel.cs  LanguageController.cs  MainViewModel.cs  NotifyingClass.cs  RealS.cs  RealSenseWrapper.cs  TexturedMeshSerializer.cs
ZCU.TechnologyLab.DepthClient/from/: Window.xaml.cs
ZCU.TechnologyLab.DepthClientLib/: .gitignore  CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  RsCapture.cpp  RsCapture.h  hello_librealsense2.cpp  hello_librealsense2.h  readme.md
ZCU.TechnologyLab.DepthClientLib/cmake_modules/: FindRealSense2.cmake
